--- a/client/src/components/Form/Form.module.css
+++ b/client/src/components/Form/Form.module.css
@@ -1,6 +1,9 @@
 .form {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 15px;
+}
+
+.title {
+    text-align: center;
 }
